# game-mode-rust

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build-release.ps1  dev.ps1
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs  tauri_commands.rs  tray.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/domain/: error.rs  mod.rs  types.rs
src-tauri/src/core/services/: clash_service.rs  config_service.rs  mod.rs  mode_service.rs  process_service.rs  startup_service.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/clash/: client.rs  mod.rs
src-tauri/src/infra/windows/: elevation.rs  file_dialog.rs  mod.rs  process.rs  proxy.rs  startup.rs  wininet.rs
src/api/: tauri.ts
