[package]
name = "game-mode-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_mode_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
thiserror = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
winreg = "0.52"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Networking_WinInet",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
